


	- Made the warnings when you are about to re-pair a round that is already
	  with judges or with ballot scores REALLY FRIGGIN HARD TO MISS.

	- Added a judgevar2 tiebreaker that will sample the students a judge has
	  judged, not the whole student population, in its calculations.
	  Rejiggered the judgevar tiebreaker to also work better.  (These are also
	  known as z-scores.)

	- Cleaned up the "swap judge" menus in the panel view screen, and added
	  information (which division/event, what their prefs are, and which
	  bracket) into the "judging elsewhere" menu.

	- Added a weight score to allow the preferred placement of diversity
	  enhancing judges into rounds.

	- Added the ability to track which judges are diversity enhancing, and
	  allow the tournament director to specify a policy for that, and to
	  optionally allow coaches to so identify their own judging.

	- Numerous little speed and stability improvements

==CHANGES RELEASED 12.20.2013==

	- Added support for joint/unified login with IDEA once they activate their
	  Bakery system

	- Fixed the round robin pairing algorithm to work much better no matter how
	  many debaters you fling at it.

	- Switching a student will now also switch their code designation for non
	  numerical coded events.

	- The Panel Force Edit Results screen now shows any rfds and comments the
	  judge may have entered as well as results.

	- Implemented the Sloat Method of recoding entries randomly by school where
	  the school order is itself random for each event.

	- Added a little indicator on how many ballots are not entered to the
	  schematic

	- Added the pending ballot report to the schematic.

	- Fixed the debate packet report to better report results from prelims with
	  panels instead of single judges.

	- Added a report to print pending ballots to send runners out to find and
	  beat people who haven't submitted ballots.

	- Fixed an issue where the team position for WUDC events was not being set
	  correctly.
