@@ -92,8 +92,7 @@
 
 			<tr class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %>">
 
-				
-				<td class="smallish">
+				<td class="smaller <% $panel->room->id ? "" : "red centeralign padno" %>">
 %					unless ($entry_only) { 
 					<a class="white block" href="panel_view.mhtml?panel_id=<% $panel->id %>">
 %					}
@@ -106,12 +105,17 @@
 				
 				<td class="smallish">
 %					foreach my $judge (@panel_judges) { 
-%					unless ($entry_only) { 
-						<a class="white nowrap block" href="panel_view.mhtml?panel_id=<% $panel->id %>">
-%					}
+%						unless ($entry_only) { 
+							<a class="white nowrap block" href="panel_view.mhtml?panel_id=<% $panel->id %>">
+%						}
 						<% ($no_judge_codes) ? $judge->first  : $judge->school->code." ".$judge->code %>
 						<% $judge->last %>
 						<% ($judge->chair) ? "*" : "" %>
+						</a>
+% 					} 
+%					unless (@panel_judges) { 
+						<a class="red nowrap block" href="panel_view.mhtml?panel_id=<% $panel->id %>">
+							None
 						</a>
 % 					} 
 				</td>
