@@ -294,7 +294,7 @@
 					</td>	
 %				}
 
-				<td class="smaller">
+				<td class="smaller <% $panel->roomname eq "None" ? "red centeralign padno" : "" %>">
 					<span class="hidden"><% $panel->roomname %><% $panel->flight %></span>
 					<a class="white padless block" href="panel_view.mhtml?panel_id=<% $panel->id %>">
 						<% ($panel->bye) ? "BYE" :  $panel->roomname %>
@@ -400,6 +400,12 @@
 								<% $pref_record{$judge->id."-".$panel->id} %>
 								<% $tab_ratings ? $judge->tab_rating : "" %>
 							</span>
+						</a>
+% 					}
+
+%					unless (@{$judges_by_panel{$panel->id}}) {
+						<a class="red nowrap block padless " href="panel_view.mhtml?panel_id=<% $panel->id %>">
+							NO JUDGE
 						</a>
 % 					}
 						 
