@@ -1,17 +1,19 @@
 <%args>
 	$account
-	$circuit_id => undef
-	$timezone => undef
 	$name
 	$abbr
-	$state        => undef
-	$country      => undef
-	$url          => undef
-	$full_members => 0
-	$tourn_only   => 0
-	$track_bids   => undef
-	$regions      => undef
-	$demographics => undef
+	$circuit_id         => undef
+	$timezone           => undef
+	$state              => undef
+	$country            => undef
+	$url                => undef
+	$full_members       => 0
+	$tourn_only         => 0
+	$track_bids         => undef
+	$regions            => undef
+	$demographics       => undef
+	$judge_demographics => undef
+	$judge_training     => undef
 </%args>
 <%init>
 
@@ -38,6 +40,8 @@
 		$circuit->setting("track_bids", $track_bids);
 		$circuit->setting("regions", $regions);
 		$circuit->setting("demographics", $demographics);
+		$circuit->setting("judge_demographics", $judge_demographics);
+		$circuit->setting("judge_training", $judge_training);
 
 	}  # end of if circuit_id
 
