@@ -82,6 +82,12 @@
 				</a>
 %			}
 
+%			if ($circuit->setting("judge_training")) { 
+				<a class="<% $whoami eq "cooke" ? "dk" : "" %>blue nowrap martop block" href="judge_training.mhtml?circuit_id=<% $circuit-> id %>">
+					Judge training status
+				</a>
+%			}
+
 		</div>
 
 %		if ($whoami eq "email") { 
