@@ -1,5 +1,8 @@
 
 
+	- A more obvious warning was added to the schematic when insufficient rooms
+	  were available for the pairing to work.  Rounds with no room or judge
+	  are highlighted now in red as well.
 
 	- Made the warnings when you are about to re-pair a round that is already
 	  with judges or with ballot scores REALLY FRIGGIN HARD TO MISS.
